changed application size

--- a/Map/BlindMap.csproj
+++ b/Map/BlindMap.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E1B4B965-E252-463E-A423-C9D3A181D6AB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Map1</RootNamespace>
-    <AssemblyName>Map1</AssemblyName>
+    <RootNamespace>Map</RootNamespace>
+    <AssemblyName>BlindMap</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
